src/pages/product/Product.module.css
.container {
    display: grid;
    grid-template-columns: 1fr 1fr;
    height: 100%;
    padding: 0;
}

.whatsapp_share {
    position: fixed;
    top: 50vh;
    right: -30px;
    -webkit-transform: rotate(270deg);
    cursor: pointer;
    height: 40px;
    width: 100px;
    background-color: green;
    border-radius: 5px;

    /* Disable hyperlink */
    color: white !important;
    text-decoration: none;
    /* Disable hyperlink */

    align-items: center;
    justify-content: space-around;
    display: flex;
}

/* Overlay Styles */
.zoom_overlay {
    position: fixed;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
    z-index: 1;
    backdrop-filter: blur(4px) !important;
    background: inherit;
    box-shadow: inset 0 0 100px black;
    display: flex;
    justify-content: center;
    align-items: center;
}

.zoomed_image_container {
    height: 70%;
    width: 70%;
    background: inherit;
    position: relative;
}

.close_overlay {
    background: white;
    cursor: pointer;
    position: absolute;
    right: -25px;
    top: 0;
    padding: 5px;
    border-radius: 30px;
}

.next_overlay,
.prev_overlay {
    cursor: pointer;
    position: absolute;
    border-radius: 30px;
    background: white;
    padding: 5px;
    top: 42%;
}

.next_overlay {
    right: -20px;
}

.prev_overlay {
    left: -20px;
}
/* Overlay Styles */

/* Images Section */

.images_section {
    background-color: rgb(203, 203, 203);
    display: flex;
    justify-content: center;
    align-items: center;
    margin-bottom: var(--margin-divider);
}

.images_container {
    height: 60%;
    width: 70%;

    flex-direction: column;
}

.primary_image_container {
    width: 100%;
    height: 100%;
    border-radius: 15px;
    background-color: whitesmoke;
}

.secondary_image_container,
.secondary_image_container_active {
    border-radius: 15px;
    background-color: whitesmoke;
    width: 20%;
    height: 100%;
}

.images_container,
.primary_image_container,
.secondary_images_container {
    display: flex;
    justify-content: center;
    align-items: center;
}

.primary_image_container,
.secondary_image_container,
.secondary_image_container_active {
    position: relative;
}

.primary_image_container > img,
.secondary_image_container > img,
.zoomed_image_container > img,
.secondary_image_container_active > img {
    object-fit: contain;
}

.primary_image:hover,
.secondary_image_container > img:hover,
.secondary_image_container_active > img {
    color: #fff;
    display: inline-block;
    opacity: 0.2;
    cursor: pointer;
}

.secondary_images_container {
    margin-top: 5%;
    width: 100%;
    height: 20%;
    display: flex;
    justify-content: space-between;
}

/* Images Section */

/* Details Section */
.details_section {
    background-color: rgb(203, 203, 203);
    height: 100%;
    display: flex;
    margin-bottom: var(--margin-divider);
}

/* White Card */
.name,
.description,
.non_mobile_stock_price_container,
.mobile_stock_price_container {
    background: white;
    border-radius: 4px;
    margin: 15px;
    padding: 10px;
}

.stock {
    border-radius: 4px;
    width: fit-content;
    padding: 5px;
    background-color: rgb(228, 228, 228);
}

.details_container {
    display: flex;
    flex-direction: row;
}

.contact_button {
    width: 200px;
    margin-top: 10px;
}

.price {
    font-size: 40px;
    font-weight: 500;
}
.mobile_stock_price_container {
    display: none;
    flex-direction: column;
    align-items: center;
    height: fit-content;
}

.non_mobile_stock_price_container {
    display: flex;
    flex-direction: column;
    align-items: center;
    height: fit-content;
}

.name {
    font-size: 35px;
}

.buttons_container {
    display: flex;
    flex-direction: column;
}

.call_button {
    margin-top: 10px;
}
/* Details Section */

@media only screen and (max-width: 1200px) {
    .whatsapp_share {
        height: 31px;
        right: -35px;
    }

    .description {
        font-size: 16px;
    }
}

/* Tablet */
@media only screen and (max-width: 1440px) {
    .container {
        padding-bottom: 20px;
        width: 100%;
        max-width: 100vw;
        display: flex;
        flex-direction: column;
    }

    .next_overlay,
    .close_overlay,
    .prev_overlay {
        background: rgb(158, 158, 158);
    }

    .next_overlay {
        right: 5px;
    }

    .prev_overlay {
        left: 5px;
    }

    .whatsapp_share {
        height: 31px;
        right: -35px;
    }

    .contact_button {
        align-self: center;
    }

    .description {
        font-size: 16px;
    }

    .primary_image_container {
        height: 450px;
        border-radius: 0px;
        background-color: black;
    }

    .primary_image {
        position: relative !important;
    }

    .secondary_images_container {
        display: none;
    }

    .name {
        font-size: 25px;
    }

    .images_container {
        height: 100%;
        width: 100%;
    }
}

/* Mobile */
@media only screen and (max-width: 767px) {
    .container {
        display: flex;
        flex-direction: column;
    }

    .details_container {
        padding: 0 0 0 0 !important;
        flex-direction: column;
    }

    .whatsapp_share {
        height: 31px;
        right: -35px;
    }

    .contact_button {
        align-self: center;
        width: 60%;
    }

    .call_button {
        width: 30%;
        margin-top: 10px;
    }

    .price {
        font-size: 30px;
        font-weight: 450;
    }

    .description {
        font-size: 16px;
    }

    .primary_image_container {
        height: 350px;
    }
    .primary_image {
        position: relative !important;
    }

    .secondary_images_container {
        display: none;
    }

    .name {
        font-size: 25px;
    }

    .images_container {
        height: 100%;
        width: 100%;
    }

    .non_mobile_stock_price_container {
        display: none;
    }

    .mobile_stock_price_container {
        display: flex;
    }

    .buttons_container {
        display: flex;
        flex-direction: row;
        justify-content: space-around;
        width: 100%;
    }
}

@media only screen and (min-width: 1441px) {
    .non_mobile_stock_price_container {
        display: block;
        padding: 0px;
        margin: 0;
    }
    .details_container {
        flex-direction: column;
    }
    .details_section {
        justify-content: center;
        align-items: center;
        background-color: white;
    }
    .images_section {
        margin-bottom: 0;
        background-color: white;
    }
    .buttons_container {
        display: flex;
        flex-direction: row;
        justify-content: start;
        width: 100%;
    }
    .buttons_container > button {
        width: 200px;
        margin-right: 10px;
    }
}

